Revision history for WWW::Mechanize

1.26

[FIXES]
*   Re-reversed the content decoding.  This is critical for reading from
    sites with gzip on the fly, like Wikipedia.
*   Content is now properly tainted.

[ENHANCEMENTS]
*   mech-dump can now pass --agent and --agent-alias flags so you can
    fetch from sites like Wikipedia that block LWP user agents.


1.24        Fri May 11 15:57:56 CDT 2007
========================================

NOTE: Version 1.24 will NOT automatically decode gzipped content for
you any more.  Consider it a "do not use" release.

[FIXES]

*   Fixed failures in "make test" with some versions of HTTP::Server::Simple
*   RT #26593: Improved handling of charsets.  Thanks Kevin Falcone.
*   RT #24354: find_link now handles http-equivs with quoted URLs.
*   Reverses the change in 1.21_01 where it decodes the content.

[ENHANCEMENTS]
*   Added find_all_inputs() and find_all_submits() methods.  Thanks,
    Mike O'Regan.
*   Test::LongString is no longer needed, so has been removed as a
    requirement.

[TESTS]
*   Added a test for save_content()


1.22        Fri Mar  2 00:05:57 CST 2007
========================================
[INTERNALS]
Added new tests.

Added Perl::Critic changes and a perlcriticrc file.


1.21_04     Sat Oct  7 21:35:42 CDT 2006
========================================
[FIXES]
*   $mech->content( type => 'text' ) was not freeing memory.  Thanks to
    Cat Okita for finding it.

[INTERNALS]
*   Made the order of parms to $mech->content() not relevant.


1.21_03     Sat Oct  7 01:21:46 CDT 2006
========================================
[THINGS THAT MAY BREAK YOUR CODE]
*   The methods $mech->form() and $mech->follow() have been removed.
    They've been deprecated since 1.10, which was released in Feb 2005.

[ENHANCEMENTS]
*   I'm trying to nail down what seems to be a memory leak on long-running
    Mech programs.  I'm stringifying URI::URL objects wherever I can.

[INTERNALS]
*   No longer uses UNIVERSAL.

